# clinic-printer-helper

./: .gitignore  CLAUDE.md  README.md  env.local  instrumentation-client.ts  next.config.ts  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: publish.yml
app/: globals.css  layout.tsx  page.tsx
app/appointments/: page.tsx
app/lock/: page.tsx
app/settings/: page.tsx
app/setup/: page.tsx
components/: AppointmentRow.tsx  BulkActionBar.tsx  BulkPrintModal.tsx  FindPatientModal.tsx  LabelPreview.tsx  MissingInfoModal.tsx  PrintHistoryPanel.tsx  PrintModal.tsx  QuickFilters.tsx  SearchInput.tsx  StatusBadge.tsx  StatusFilter.tsx  UpdateBanner.tsx
contexts/: AppointmentsContext.tsx  ClinicConfigContext.tsx
lib/: utils.ts
services/: ArgoxPrinterService.ts  MockPrinterService.ts  PrinterService.ts  WebPrinterService.ts  api.ts  appointmentsApi.ts  patientsApi.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
store/: ConfigStore.ts  PatientInfoCache.ts  PrintHistoryStore.ts
types/: appointment.ts  config.ts  patient.ts
