[package]
name = "printer-helper"
version = "0.3.9"
description = "Clinic Print Helper"
authors = ["Clinic"]
license = "MIT"
repository = ""
default-run = "printer-helper"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "printer_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winspool", "minwindef", "winnt", "wingdi", "winuser", "windef"] }

[target.'cfg(target_os = "macos")'.dependencies]
printpdf = "0.7"
